fixed alignment of wrong/correct answer

--- a/main.css
+++ b/main.css
@@ -180,12 +180,12 @@ h3{
         width:fit-content;
 
     }
-       
+   
 
 .correct-answer{
    
 
-    padding:0px;
+    padding:2px;
     height:85px;
     margin-top:0px;  
 } 
